# ai-vector-cleanroom

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE.md  PUBLISHING.md  README.md  annulus_detector.py  clean.bat  clean_base.py  component_repair.py  compound_path_splitter.py  designer_ops_audit.py  editability_audit.py  editing_test_page.py  exact_native_shapes.py  install_deps.bat  paint_roles.py  preflight_check.py  pyproject.toml  quality_diagnostics.py  recolor_page.py  requirements-preview.txt  requirements.txt  scene_graph_postprocess.py  stroke_engine.py  svg_postprocess.py  trace_engine.py  vector_cleanroom.py  workbench.bat  workbench.py  使用說明.txt
.github/workflows/: ci.yml
tests/: README.md  generate_fixtures.py  highres_smoke.py  run_highres_test.bat  run_tests.bat  test_adaptive_palette.py  test_annulus_detector.py  test_candidate_policy.py  test_clean_base_p0.py  test_cleanroom.py  test_component_bucketing.py  test_component_repair.py  test_compound_path_splitter.py  test_designer_ops_audit.py  test_editability_audit.py  test_editing_test_page.py  test_exact_native_shapes.py  test_gradient_reconstruction.py  test_paint_resource_summary.py  test_paint_roles.py  test_quality_diagnostics.py  test_recolor_page.py  test_regression.py  test_scene_graph_postprocess.py  test_stroke_safety.py  test_svg_postprocess.py  test_trace_engine_binary_mask.py  test_visual_gate.py  test_workbench_beta3.py  test_workbench_beta4.py
